cabal-version: >= 1.10

name: splint
version: 1.0.1.5

synopsis: HLint as a GHC source plugin.
description:
  Splint makes HLint 3 available as a GHC source plugin. To use it, pass
  @-fplugin=Splint@ to GHC. Any options passed to Splint are passed through to
  HLint. For example you can use @-fplugin-opt=Splint:'--ignore=Use concatMap'@
  to ignore the "Use @concatMap@" suggestion.

build-type: Simple
category: Development
extra-source-files: README.markdown
license-file: LICENSE.markdown
license: ISC
maintainer: Taylor Fausak

source-repository head
  location: https://github.com/tfausak/splint
  type: git

library
  build-depends:
    base >= 4.13.0 && < 4.16
    , containers >= 0.6.2 && < 0.7
    , ghc >= 8.10 && < 8.11 || >= 9.0 && < 9.1
    , hlint
    , stm >= 2.5.0 && < 2.6
  default-language: Haskell2010
  exposed-modules: Splint
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-exported-signatures
    -Wno-missing-import-lists
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-unsafe
  hs-source-dirs: src/lib

  if impl(ghc >= 9.0)
    build-depends: hlint >= 3.3 && < 3.4
  else
    build-depends: hlint >= 3.2 && < 3.3
